--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,14 @@ body {
   background: #E7E7E7;
 }
 
+button {
+    outline: none !important;
+}
+
+div {
+    outline: none !important;
+}
+
 ul {
     margin: 0;
     padding: 0;
@@ -158,16 +166,62 @@ h4 {
 
 .hover-hl {
     border: none;
-    margin: 1px;
 }
 
 .hover-hl:hover {
-    border-left: 2px solid #ffae00;
-    border-right: 2px solid #ffae00;
+    border-left: 3px solid #ffae00;
+    border-right: 3px solid #ffae00;
     border-radius: 0 !important;
 }
 
 .selected {
-    border: 1px solid #f44f5a;
+
+    border-left: 3px solid #f44f5a;
+    border-right: 3px solid #f44f5a;
     border-radius: 0 !important;
+}
+
+.nav-tabs {
+    border: none !important;
+}
+
+.nav {
+    padding: 0;
+}
+
+.navbar-header {
+    bottom: 0;
+    position: absolute;
+    display: 'inline'
+}
+
+#tab-controller {
+    border: 1px solid #243743;
+    border-bottom-left-radius: 5px;
+}
+
+.dark-tab {
+    background: #243743;
+}
+
+.nav-tabs>li {
+    margin-bottom: 0;
+    border-radius: 0;
+    border: none !important;
+}
+
+.nav-tabs>li.active>a {
+    border: none;
+    color: #243743 !important;
+}
+
+.nav-tabs>li>a {
+    color: #aaaaaa !important;
+    border: none !important;
+}
+
+.nav-tabs>li>a:hover {
+    border: none !important;
+    background: white;
+    color: #f44f5a !important;
 }
